--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -1,181 +1,200 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>The Looking Glass</title>
 
-    <title>The Looking Glass</title>
+        <!-- Link Bootstrap and CSS -->
+        <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
+        <link href="{{url_for('static', filename='styles/bootstrap.min.css')}}" type="text/css" rel="stylesheet">
+        <script src="{{url_for('static', filename='js/script.js')}}"></script>
+    </head>
 
-    <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
-    <link href="{{url_for('static', filename='styles/bootstrap.min.css')}}" type="text/css" rel="stylesheet">
+    <body>
+        <!-- Navigation section -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container">
+                <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
+                <!--<a class="navbar-brand" href="index.html">The Looking Glass</a> -->
+                <a class="navbar-left" onclick="show_overlay()" href="#">Sign Up</a>
+                <a class="navbar-left" href="/Login">Login</a>
+            </div>
+            <!-- /.container -->
+        </nav>
 
-    <!-- Custom styles for this template -->
+        <!-- Page Content -->
+        <header>
+            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+                <ol class="carousel-indicators">
+                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <!-- Slide One - Set the background image for this slide in the line below -->
+                    <div class="carousel-item active">
+                        <img src="static/PICTURES/index-1.jpg" alt="image">
+                        <div class="carousel-caption d-none d-md-block">
 
+                        </div>
+                    </div>
+                    <!-- Slide Two - Set the background image for this slide in the line below -->
+                    <div class="carousel-item" >
+                        <img src="static/PICTURES/index-2.jpg" alt="image">
+                        <div class="carousel-caption d-none d-md-block">
 
-  </head>
+                        </div>
+                    </div>
+                    <!-- Slide Three - Set the background image for this slide in the line below -->
+                    <div class="carousel-item" >
+                        <img src="static/PICTURES/index-3.jpg" alt="image">
+                        <div class="carousel-caption d-none d-md-block">
 
-  <body>
+                        </div>
+                    </div>
+                </div>
+                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                </a>
+                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                </a>
+            </div>
+            <!-- /.carousel -->
+        </header>
 
-    <!-- Navigation -->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-      <div class="container">
-        <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
-        <!--<a class="navbar-brand" href="index.html">The Looking Glass</a> -->
+        <div class="container">
+            <h1 class="my-4">The Looking Glass</h1>
 
-      <a class="navbar-left" href="/signup">Signup</a>
-      <a class="navbar-left" href="/login">Login</a>
+            <!-- Mini Information Box Section -->
+            <div class="row">
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100">
+                        <h4 class="card-header">Our Mission</h4>
+                        <div class="card-body">
+                            <p class="card-text">See what our company is all about and how it can help you!</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="/MissionStatement" class="btn btn-primary">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100">
+                        <h4 class="card-header">Membership Levels</h4>
+                        <div class="card-body">
+                            <p id="p01" class="card-text">
+                                Once you create an account, you can download up to ten pictures for free.
+                                Once you upload a picture, your account will be upgraded to a "contributor".
+                                <br>
+                                Contributors are able to download as many photos as they'd like, as well as
+                                having access to their own personal page to store their photos.
+                            </p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="/Signup" class="btn btn-primary">Sign Up</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100">
+                        <h4 class="card-header">Popular</h4>
+                        <div class="card-body">
+                            <p class="card-text">See what photos people are ranting and raving about!</p>
+                        </div>
+                        <div class="card-footer">
+                            <a href="/PopularPhotos" class="btn btn-primary">View Photos</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->
 
+            <div class="gallery">
+                <figure>
+                    <img src="static/PICTURES/index-4.jpg" alt="" />
+                    <figcaption>Daytona Beach <small>United States</small></figcaption>
+                </figure>
+                <figure>
+                    <img src="static/PICTURES/index-5.jpg" alt="" />
+                    <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
+                </figure>
+                <figure>
+                    <img src="static/PICTURES/index-6.jpg" alt="" />
+                    <figcaption>Bad Pyrmont <small>Deutschland</small></figcaption>
+                </figure>
+                <figure>
+                    <img src="static/PICTURES/index-7.jpg" alt="" />
+                    <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
+                </figure>
+                <figure>
+                    <img src="static/PICTURES/index-8.jpg" alt="" />
+                    <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
+                </figure>
+                <figure>
+                    <img src="static/PICTURES/index-9.jpg" alt="" />
+                    <figcaption>Highlands <small>United States</small></figcaption>
+                </figure>
+            </div>
+            <!-- /.gallery -->
+            <hr>
+        </div>
+        <!-- /.container -->
+
+        <div id="overlay">
+            <div id="overlay-inner">
+                <div id="signin-section">
+                    <form class="form-signin" id="form-login">
+                        <h2>Log In</h2>
+                        <input type="text" name="username" class="form-control" placeholder="Username"
+                               required autofocus value="">
+                        <input type="password" name="password" class="form-control" placeholder="Password"
+                               required value="">
+                        <!-- Insert error message span -->
+                        <button id="login-button" class="btn btn-lg btn-primary btn-block" type="button">
+                            Log In
+                        </button>
+                    </form>
+                </div>
+                <div id="signup-section">
+                    <form class="form-signin" id="form-signup">
+                        <h2>Sign Up</h2>
+                        <input type="text" name="firstName" class="form-control" placeholder="First Name"
+                               required autofocus value="">
+                        <input type="text" name="lastName" class="form-control" placeholder="Last Name"
+                               required autofocus value="">
+                        <input type="text" name="username" class="form-control" placeholder="Username"
+                               required autofocus value="">
+                        <input type="password" name="password" class="form-control" placeholder="Password"
+                               required value="">
+                        <!-- Insert error message span -->
+                        <button id="signup-button" class="btn btn-lg btn-primary btn-block" type="button">
+                            Sign Up
+                        </button>
+                    </form>
+                </div>
+            </div>
         </div>
 
-    </nav>
-
-    <header>
-      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-        <ol class="carousel-indicators">
-          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-        </ol>
-        <div class="carousel-inner">
-          <!-- Slide One - Set the background image for this slide in the line below -->
-          <div class="carousel-item active">
-            <img src="static/PICTURES/index-1.jpg" alt="image">
-            <div class="carousel-caption d-none d-md-block">
-
-
+        <!-- Footer -->
+        <footer class="py-5 bg-dark">
+            <div class="container">
+                <p class="m-0 text-center text-white">Copyright &copy; The Looking Glass 2018</p>
             </div>
-          </div>
-          <!-- Slide Two - Set the background image for this slide in the line below -->
-          <div class="carousel-item" >
-            <img src="static/PICTURES/index-2.jpg" alt="image">
-            <div class="carousel-caption d-none d-md-block">
+            <!-- /.container -->
+        </footer>
 
+        <!-- Bootstrap core JavaScript -->
+        <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
+        <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
 
-            </div>
-          </div>
-          <!-- Slide Three - Set the background image for this slide in the line below -->
-          <div class="carousel-item" >
-            <img src="static/PICTURES/index-3.jpg" alt="image">
-            <div class="carousel-caption d-none d-md-block">
-
-
-            </div>
-          </div>
-        </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-          <span class="sr-only">Previous</span>
-        </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-          <span class="carousel-control-next-icon" aria-hidden="true"></span>
-          <span class="sr-only">Next</span>
-        </a>
-      </div>
-    </header>
-
-    <!-- Page Content -->
-    <div class="container">
-
-      <h1 class="my-4">The Looking Glass</h1>
-
-      <!-- Marketing Icons Section -->
-      <div class="row">
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <h4 class="card-header">Our Mission</h4>
-            <div class="card-body">
-              <p class="card-text">See what our company is all about and how it can help you!</p>
-            </div>
-            <div class="card-footer">
-              <a href="MissionStatement.html" class="btn btn-primary">Learn More</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <h4 class="card-header">Membership Levels</h4>
-            <div class="card-body">
-              <p id="p01" class="card-text">
-		Once you create an account, you can download up to ten pictures for free.
-                Once you upload a picture, your account will be upgraded to a "contributor".
-                Contributors are able to download as many photos as they'd like, as well as
-                having access to their own personal page to store their photos.
-	             </p>
-            </div>
-            <div class="card-footer">
-              <a href="/signup" class="btn btn-primary">Sign-Up</a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-4 mb-4">
-          <div class="card h-100">
-            <h4 class="card-header">Popular</h4>
-            <div class="card-body">
-              <p class="card-text">See what photos people are ranting and raving about!</p>
-            </div>
-            <div class="card-footer">
-              <a href="#" class="btn btn-primary">View Photos</a>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- /.row -->
-
-
-      <div class="gallery">
-        <figure>
-          <img src="static/PICTURES/index-4.jpg" alt="" />
-          <figcaption>Daytona Beach <small>United States</small></figcaption>
-        </figure>
-        <figure>
-          <img src="static/PICTURES/index-5.jpg" alt="" />
-          <figcaption>Териберка, gorod Severomorsk <small>Russia</small></figcaption>
-        </figure>
-        <figure>
-          <img src="static/PICTURES/index-6.jpg" alt="" />
-          <figcaption>
-            Bad Pyrmont <small>Deutschland</small>
-          </figcaption>
-        </figure>
-        <figure>
-          <img src="static/PICTURES/index-7.jpg" alt="" />
-          <figcaption>Yellowstoxne National Park <small>United States</small></figcaption>
-        </figure>
-        <figure>
-          <img src="static/PICTURES/index-8.jpg" alt="" />
-          <figcaption>Quiraing, Portree <small>United Kingdom</small></figcaption>
-        </figure>
-        <figure>
-          <img src="static/PICTURES/index-9.jpg" alt="" />
-          <figcaption>Highlands <small>United States</small></figcaption>
-        </figure>
-
-      </div>
-      <!-- /.row -->
-
-      <hr>
-
-
-    </div>
-    <!-- /.container -->
-
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; The Looking Glass 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-
-  </body>
-
+    </body>
 </html>
