--- a/Project_Files/static/singlephoto.html
+++ b/Project_Files/static/singlephoto.html
@@ -1,149 +1,124 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <head>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <meta charset="UTF-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <title>The Looking Glass - Photo</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+        <!-- Link Bootstrap and CSS -->
+        <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
+        <link href="{{url_for('static', filename='styles/bootstrap.min.css')}}" type="text/css" rel="stylesheet">
+    </head>
 
-    <title>The Looking Glass</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
-    <link href="{{url_for('static', filename='styles/bootstrap.min.css')}}" type="text/css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-
-
-  </head>
-
-  <body>
-
-    <!-- Navigation -->
-    <  <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
-        <div class="container">
-          <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
-
-
-                      <a class="navbar-left" href="#">Home</a>
-
-
-
-                      <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" href="#">ACCOUNT HERE
-                                    <span class="caret"></span></button>
-                                    <ul class="dropdown-menu">
-                                      <li><a href="#">Your Homepage</a></li>
-                                      <li><a href="http://localhost:5000/upload">Upload Photos</a></li>
-                                      <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
-                                    </ul>
-                      </div>
-          </div>
+    <body>
+        <!-- Navigation section -->
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+            <div class="container">
+                <a href="/" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
+                <a class="navbar-left" href="/">Home</a>
+                <div class="dropdown">
+                    <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" href="#">{{user}}
+                        <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a href="/Dashboard">Your Homepage</a></li>
+                        <li><a href="/Upload">Upload Photos</a></li>
+                        <li><a href="/Logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
+                    </ul>
+                </div>
+            </div>
+            <!-- /.container -->
         </nav>
 
+        <!-- Page Content -->
+        <div class="container">
+            <!-- Page Heading/Breadcrumbs -->
+            <ol class="breadcrumb">
+                <li class="breadcrumb-item">
+                    <a href="/Dashboard">Home</a>
+                </li>
+                <li class="breadcrumb-item active">Portfolio Item</li>
+            </ol>
 
-    <!-- Page Content -->
-    <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <img class="img-fluid" src="http://placehold.it/750x500" alt="">
+                </div>
+                <div class="col-md-4">
+                    <h3 class="my-3">Rating</h3>
+                    <div class="row">
+                        <div class="col-lg-12">
+                            <div class="star-rating">
+                                <span class="fa fa-star-o" data-rating="1"></span>
+                                <span class="fa fa-star-o" data-rating="2"></span>
+                                <span class="fa fa-star-o" data-rating="3"></span>
+                                <span class="fa fa-star-o" data-rating="4"></span>
+                                <span class="fa fa-star-o" data-rating="5"></span>
+                                <input type="hidden" name="whatever1" class="rating-value" value="2.56">
+                            </div>
+                        </div>
+                    </div>
+                    <h3 class="my-3">Message The Publisher</h3>
+                    <div class="col-md-6">
+                        <div class="widget-area no-padding blank">
+                            <div class="status-upload">
+                                <form>
+                                    <textarea placeholder="What do you think?" ></textarea>
+                                    <button type="submit" class="btn btn-success green"><i class="fa fa-send"></i> Send</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <!-- /.row -->
 
-      <!-- Page Heading/Breadcrumbs -->
+            <!-- Related Pictures Row -->
+            <h3 class="my-4">Related Pictures</h3>
+            <div class="row">
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <a href="#">
+                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    </a>
+                </div>
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <a href="#">
+                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    </a>
+                </div>
 
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <a href="#">
+                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    </a>
+                </div>
 
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item">
-          <a href="index.html">Home</a>
-        </li>
-        <li class="breadcrumb-item active">Portfolio Item</li>
-      </ol>
+                <div class="col-md-3 col-sm-6 mb-4">
+                    <a href="#">
+                        <img class="img-fluid" src="http://placehold.it/500x300" alt="">
+                    </a>
+                </div>
+            </div>
+            <!-- /.row -->
 
-      <!-- Portfolio Item Row -->
-      <div class="row">
-
-        <div class="col-md-8">
-          <img class="img-fluid" src="http://placehold.it/750x500" alt="">
         </div>
+        <!-- /.container -->
 
-        <div class="col-md-4">
-          <h3 class="my-3">Rating</h3>
-        <div class="row">
-    <div class="col-lg-12">
-      <div class="star-rating">
-        <span class="fa fa-star-o" data-rating="1"></span>
-        <span class="fa fa-star-o" data-rating="2"></span>
-        <span class="fa fa-star-o" data-rating="3"></span>
-        <span class="fa fa-star-o" data-rating="4"></span>
-        <span class="fa fa-star-o" data-rating="5"></span>
-        <input type="hidden" name="whatever1" class="rating-value" value="2.56">
-      </div>
-    </div>
-  </div>
+        <!-- Footer -->
+        <footer class="py-5 bg-dark">
+            <div class="container">
+                <p class="m-0 text-center text-white">Copyright &copy; The Looking Glass 2018</p>
+            </div>
+            <!-- /.container -->
+        </footer>
 
-  <h3 class="my-3">Message The Publisher</h3>
-  <div class="col-md-6">
-      						<div class="widget-area no-padding blank">
-  								<div class="status-upload">
-  									<form>
-  										<textarea placeholder="What do you think?" ></textarea>
-  										<button type="submit" class="btn btn-success green"><i class="fa fa-send"></i> Send</button>
-  									</form>
-  								</div><!-- Status Upload  -->
-  							</div><!-- Widget Area -->
-  						</div>
-
-        </div>
-
-      </div>
-      <!-- /.row -->
-
-      <!-- Related Projects Row -->
-      <h3 class="my-4">Related Pictures</h3>
-
-      <div class="row">
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-        <div class="col-md-3 col-sm-6 mb-4">
-          <a href="#">
-            <img class="img-fluid" src="http://placehold.it/500x300" alt="">
-          </a>
-        </div>
-
-      </div>
-      <!-- /.row -->
-
-    </div>
-    <!-- /.container -->
-
-    <!-- Footer -->
-    <footer class="py-5 bg-dark">
-      <div class="container">
-        <p class="m-0 text-center text-white">Copyright &copy; Your Website 2018</p>
-      </div>
-      <!-- /.container -->
-    </footer>
-
-    <!-- Bootstrap core JavaScript -->
-    <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
-    <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
-
-
-  </body>
-
+        <!-- Bootstrap core JavaScript -->
+        <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
+        <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
+    </body>
 </html>
