--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
     <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +9,16 @@
         <meta name="author" content="">
         <title>The Looking Glass - Dashboard</title>
 
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Link Bootstrap and CSS -->
         <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
         <link href="{{url_for('static', filename='styles/bootstrap.min.css')}}" type="text/css" rel="stylesheet">
+
+        <!-- Bootstrap core JavaScript -->
+        <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
+        <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     </head>
 
     <body>
@@ -98,9 +104,5 @@
             </div>
             <!-- /.container -->
         </footer>
-
-        <!-- Bootstrap core JavaScript -->
-        <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
-        <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
     </body>
 </html>
