--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
 
     <head>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -10,9 +9,13 @@
         <meta name="author" content="">
         <title>The Looking Glass</title>
 
+        <link rel="icon" type="image/png" sizes="32x32" href="/static/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/static/favicon-16x16.png">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <!-- Link Bootstrap and CSS -->
         <link href="{{url_for('static', filename='styles/style.css')}}" rel="stylesheet">
         <link href="{{url_for('static', filename='styles/bootstrap.min.css')}}" type="text/css" rel="stylesheet">
+
         <!-- Bootstrap core JavaScript -->
         <script src="{{url_for('static', filename='js/jquery-3.3.1.min.js')}}"></script>
         <script src="{{url_for('static', filename='js/bootstrap.min.js')}}"></script>
@@ -177,6 +180,8 @@
                         <input type="text" name="username" class="form-control" placeholder="Username"
                                required autofocus value="">
                         <input type="password" name="password" class="form-control" placeholder="Password"
+                               required value="">
+                        <input type="password" name="passwordConfirmed" class="form-control" placeholder="Confirm Password"
                                required value="">
                         <!-- Insert error message span -->
                         <button id="signup-button" class="btn btn-lg btn-primary btn-block" type="button">
