Fixed Login/ Signup & cleaned CSS

--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -155,9 +155,9 @@
         </div>
         <!-- /.container -->
 
-        <div id="overlay">
-            <div id="overlay-inner">
-                <div id="signin-section">
+        <div class="container-fluid" id="overlay">
+            <div class="row" id="overlay-inner">
+                <div class="col-md-6" id="signin-section">
                     <form class="form-signin" id="form-login">
                         <h2>Log In</h2>
                         <input type="text" name="username" class="form-control" placeholder="Username"
@@ -170,7 +170,7 @@
                         </button>
                     </form>
                 </div>
-                <div id="signup-section">
+                <div class="col-md-6" id="signup-section">
                     <form class="form-signin" id="form-signup">
                         <h2>Sign Up</h2>
                         <input type="text" name="firstName" class="form-control" placeholder="First Name"
