Implemented Upload / Fixed Login

--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -27,9 +27,7 @@
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
             <div class="container">
                 <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
-                <!--<a class="navbar-brand" href="index.html">The Looking Glass</a> -->
-                <a class="navbar-left" id="signup-link" href="#">Sign Up</a>
-                <a class="navbar-left" href="/Login">Login</a>
+                <a class="navbar-left signup-link" href="#">Login / Sign Up</a>
             </div>
             <!-- /.container -->
         </nav>
@@ -106,7 +104,7 @@
                             </p>
                         </div>
                         <div class="card-footer">
-                            <a href="/Signup" class="btn btn-primary">Sign Up</a>
+                            <a href="#" class="btn btn-primary signup-link">Sign Up</a>
                         </div>
                     </div>
                 </div>
