--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -33,7 +33,7 @@
                     </button>
                     <ul class="dropdown-menu">
                         <li><a href="#">Your Homepage</a></li>
-                        <li><a href="/Upload">Upload Photos</a></li>
+                        <li><a href="/UploadPhoto">Upload Photos</a></li>
                         <li><a href="/Logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>
                     </ul>
                 </div>
