--- a/Project_Files/static/MissionStatement.html
+++ b/Project_Files/static/MissionStatement.html
@@ -27,7 +27,7 @@
             <div class="container">
                 <a href="/" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
                 <!--<a class="navbar-brand" href="index.html">The Looking Glass</a> -->
-                <a class="navbar-left" href="/Signup">Sign Up</a>
+                <a class="navbar-left" href="/">Go Back</a>
             </div>
             <!-- /.container -->
         </nav>
