--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -23,12 +23,15 @@
 
     <body>
         <!-- Navigation section -->
-        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark fixed-top">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
                 <a href="#" class="navbar-left"><img src="/static/PICTURES/logo_White.png"></a>
-                <a class="navbar-left" href="#">Home</a>
+                <!--<a class="navbar-left" href="#">Home</a>-->
+
                 <div class="dropdown">
+                    <div class="greeting">Hi {{ first_name }}!</div>
                     <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown" href="#">{{user}}
+                        Menu
                         <span class="caret"></span>
                     </button>
                     <ul class="dropdown-menu">
@@ -42,7 +45,7 @@
         </nav>
 
         <!-- Page Content -->
-        <div class="jumbotron jumbotron-fluid vertical-center">
+        <div class="jumbotron jumbotron-fluid vertical-center" id="jumbotron-dashboard">
             <div class="container">
                 <div class="text-center">
                     <br>
@@ -77,7 +80,7 @@
                             <p class="card-text">Share your unique photographs with the Looking Glass community.</p>
                         </div>
                         <div class="card-footer text-center">
-                            <a href="/Upload" class="btn btn-primary">Upload</a>
+                            <a href="/UploadPhoto" class="btn btn-primary">Upload</a>
                         </div>
                     </div>
                 </div>
