Separate upload folders and sample data

--- a/Project_Files/static/index.html
+++ b/Project_Files/static/index.html
@@ -162,7 +162,7 @@
                                required autofocus value="">
                         <input type="password" name="password" class="form-control" placeholder="Password"
                                required value="">
-                        <!-- Insert error message span -->
+                        <span id="alert-message-login"></span>
                         <button id="login-button" class="btn btn-lg btn-primary btn-block" type="button">
                             Log In
                         </button>
@@ -181,7 +181,7 @@
                                required value="">
                         <input type="password" name="passwordConfirmed" class="form-control" placeholder="Confirm Password"
                                required value="">
-                        <!-- Insert error message span -->
+                        <span id="alert-message-signup"></span>
                         <button id="signup-button" class="btn btn-lg btn-primary btn-block" type="button">
                             Sign Up
                         </button>
