Gets users photos, but still need to format the html

--- a/Project_Files/static/dashboard.html
+++ b/Project_Files/static/dashboard.html
@@ -64,12 +64,12 @@
             <div class="row">
                 <div class="col-lg-4">
                     <div class="card text-center">
-                        <h4 class="card-header">Your Homepage</h4>
+                        <h4 class="card-header">Your Photos</h4>
                         <div class="card-body">
-                            <p class="card-text">Your Homepage is where you keep all of your photos.</p>
+                            <p class="card-text">Your Photos is where you keep all of your photos.</p>
                         </div>
                         <div class="card-footer">
-                            <a href="#" class="btn btn-primary">Go to your Homepage</a>
+                            <a href="/Photos" class="btn btn-primary">Go to Your Photos</a>
                         </div>
                     </div>
                 </div>
